# elastic

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-ubuntu-clang.yml  cmake-ubuntu-gcc.yml  cmake-windows-vs.yml
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.sln  benchmark.vcxproj  benchmark.vcxproj.filters  config.hpp  data.hpp  data.pb.cc  data.pb.h  data.proto  elastic_parse.hpp  elc.hpp  proto_data_base.hpp  protobuf.hpp  scope_timer.hpp
cmake/: find_boost.cmake  find_protobuf.cmake
depends/: CMakeLists.txt
depends/boost/: CMakeLists.txt
depends/protobuf/: CMakeLists.txt
docs/: design_zh.md  layout.md
include/: elastic.hpp
include/elastic/: access.hpp  archive.hpp  archive_type.hpp  array_wrapper.hpp  attribute.hpp  basic_archive.hpp  basic_binary_iarchive.hpp  basic_binary_iprimitive.hpp  basic_binary_oarchive.hpp  basic_binary_oprimitive.hpp  basic_iarchive.hpp  basic_iprimitive.hpp  basic_iserializer.hpp  basic_oarchive.hpp  basic_oprimitive.hpp  basic_oserializer.hpp  basic_pointer_iserializer.hpp  basic_pointer_oserializer.hpp  basic_primitive.hpp  basic_serialize.hpp  basic_serializer.hpp  binary_archive.hpp  binary_iarchive.hpp  binary_iarchive_impl.hpp  binary_iserialize.hpp  binary_oarchive.hpp  binary_oarchive_impl.hpp  binary_oserialize.hpp  binary_primitive.hpp  binary_serialize.hpp  bytes.hpp  codecvt_null.hpp  common_iarchive.hpp  common_oarchive.hpp  concepts.hpp  exception.hpp  extended_type_info.hpp  extended_type_info_typeid.hpp  fixed.hpp  flex_buffer.hpp  (+31 more)
include/elastic/archive/: archive_exception.hpp  basic_archive.hpp  basic_binary_archive.hpp  basic_binary_iarchive.hpp  basic_binary_iprimitive.hpp  basic_binary_oarchive.hpp  basic_binary_oprimitive.hpp  basic_iarchive.hpp  basic_oarchive.hpp  basic_oprimitive.hpp  basic_primitive.hpp  binary_iarchive.hpp  binary_iarchive_impl.hpp  binary_oarchive.hpp  binary_oarchive_impl.hpp  binary_primitive.hpp  common_archive.hpp  common_iarchive.hpp  common_oarchive.hpp  interface_archive.hpp  interface_iarchive.hpp  interface_oarchive.hpp  iserialize.hpp  oserialize.hpp
include/elastic/detail/: basic_int128.hpp  basic_streambuf.hpp  concepts.hpp  config.hpp  eval_if.hpp  filed_count.hpp  generate.hpp  nocopyable.hpp  reflect.hpp  require.hpp  singleton.hpp  size_t_.hpp  type_traits.hpp
include/elastic/property/: fixed.hpp  repeated.hpp
include/elastic/reflect/: filed_count.hpp  nocopyable.hpp  size_t_.hpp
include/elastic/serialize/: access.hpp  attribute.hpp  iserialize.hpp  oserialize.hpp  parser.hpp  serialize_streambuf.hpp  streambuf.hpp  traits.hpp  types.hpp
include/elastic/types/: bytes.hpp  fixed.hpp  float.hpp  message.hpp  optional.hpp  sequence.hpp  string.hpp  types.hpp  varint.hpp
shell/: install_3rd.sh
src/: command_line.cpp  common.hpp  defines.h  file_descriptor.cpp  file_descriptor.h  generator.sln  generator.vcxproj  generator.vcxproj.filters  idle_gen_cpp.cpp  idle_gen_cpp.h  part.h  test_proto.cpp  test_proto.els  test_proto.els.cpp  test_proto.els.h  test_proto.h  test_proto.mpr.cpp  test_proto.mpr.h
src/elastic/: elastic.sln
test/: CMakeLists.txt  Test.cpp  attr.h  els.h  exception.h  flex_buffer.h  format_style.hpp  generate.cpp  generate.h  inherit.h  io.h  test.sln  test.vcxproj  test.vcxproj.filters  test_proto.els.cpp  test_proto.els.h  tuple_size.cpp  tuple_size.h  type.h  unit_test.sln  unit_test.vcxproj  unit_test.vcxproj.filters
